--- a/Dockerfile-3.9
+++ b/Dockerfile-3.9
@@ -1,14 +1,23 @@
 FROM alpine:3.9
 LABEL lordmuffin <dorkmeisterx69@gmail.com>
 
-RUN	apk --no-cache --no-progress upgrade -f && \
-	apk --no-cache --no-progress add openssl bash su-exec s6 tzdata
+ENV	TIMEZONE="UTC" \
+	SYSLOG_OPTION="-O-"
+COPY ["entrypoint.sh", "/usr/local/bin"]
+
+RUN	apk --no-cache --no-progress upgrade -f
+	# apk --no-cache --no-progress add setpriv
 
 # default rule for syslog is send to stdout with option "-O-"
 # use -e SYSLOG_OPTION="-R 172.17.0.1" to forward the log to another syslog server and mute the log
-ENV	TIMEZONE="UTC" \
-	SYSLOG_OPTION="-O-"
-COPY	s6.d /etc/s6.d
-COPY	entrypoint.sh /
+RUN \
+    set -e -u; \
+    addgroup -g 1000 -S alpine && \
+    adduser -u 1001 -S alpine -G alpine && \
+    mkdir /work \
+    chmod +x entrypoint.sh
 
-ENTRYPOINT ["/entrypoint.sh"]
+WORKDIR /work
+ENTRYPOINT ["/bin/ash"]
+
+VOLUME ["/work"]
